cut off text fix

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -184,8 +184,7 @@ button {
 }
 
 .triangle-border .inner-border{
-	height: 367px;
-	max-height: 367px;
+	height: 90%;
 	overflow-y: scroll;
 }
 
